--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -2,10 +2,10 @@ name: example
 description: Demo of PrettyDiffText
 publish_to: 'none'
 
-version: 1.0.0
+version: 2.0.0
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=3.2.0-0 <4.0.0"
 
 dependencies:
   flutter:
